--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 
+<script type="text/javascript" src="resources/js/init.js"></script>
+<script type="text/javascript" src="resources/js/var.js"></script>
+<script type="text/javascript" src="resources/js/char2.js"></script>
 <script type="text/javascript" src="resources/js/main.js"></script>
 
 </body>
