--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         body {
             margin: 0;
         }
+        canvas {
+            margin: 50px auto;
+        }
     </style>
 </head>
 <body>
